AG-3606 - fixed columns toolpanel layout bug

--- a/community-modules/core/src/styles/ag-theme-alpine/sass/_ag-theme-alpine-common.scss
+++ b/community-modules/core/src/styles/ag-theme-alpine/sass/_ag-theme-alpine-common.scss
@@ -108,6 +108,17 @@
         position: relative;
     }
 
+    .ag-column-drop-vertical-empty-message {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+        display: flex;
+        align-items: center;
+    }
+
     .ag-tool-panel-wrapper {
         width: 250px;
     }
